# chordplay

./: .gitignore  CMakeLists.txt  Makefile  README.md  chord.cc  chord.h  chordparser.cc  chordparser.h  chordplay.cc  ensemble.cc  ensemble.h  ensembleparser.cc  ensembleparser.h  midi.cc  midi.h  note.cc  note.h  scale.cc  scale.h
ensembles/: reeds  stringensemble  strings
rhythms/: ballad  fotf
src/: CMakeLists.txt  chord.cc  chord.h  chordparser.cc  chordplay.cc  config.h.in  ensemble.cc  ensemble.h  midi.cc  midi.h  note.cc  note.h  rhythm.cc  rhythm.h  rhythmparser.cc  rhythmparser.h  scale.cc  scale.h
